RESOLVED FIXED151977
[JSC] On x86, we should XOR registers instead of moving a zero immediate
https://bugs.webkit.org/show_bug.cgi?id=151977
Summary [JSC] On x86, we should XOR registers instead of moving a zero immediate
Benjamin Poulain
Reported 2015-12-07 18:09:41 PST
[JSC] On x86, we should XOR registers instead of moving a zero immediate
Attachments
Patch (2.69 KB, patch)
2015-12-07 18:10 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2015-12-07 18:10:12 PST
WebKit Commit Bot
Comment 2 2015-12-07 19:35:43 PST
Comment on attachment 266838 [details] Patch Clearing flags on attachment: 266838 Committed r193686: <http://trac.webkit.org/changeset/193686>
WebKit Commit Bot
Comment 3 2015-12-07 19:35:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.