[JSC] On x86, we should XOR registers instead of moving a zero immediate https://bugs.webkit.org/show_bug.cgi?id=151977

Patch by Benjamin Poulain <bpoulain@apple.com> on 2015-12-07
Reviewed by Filip Pizlo.

It is smaller and the frontend has special support
for xor.

* assembler/MacroAssemblerX86Common.h:
(JSC::MacroAssemblerX86Common::move):
(JSC::MacroAssemblerX86Common::signExtend32ToPtr):

Canonical link: https://commits.webkit.org/170123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193686 268f45cc-cd09-0410-ab3c-d52691b4dbfc